--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body style="margin: 0;">
     <div id="root" style="
         background-color: #f1f1f1;
         text-align: center;
         padding: 40px;
     ">
-        <img src="https://ptpcdn.dyas.top/upload/2025_02_1964974DSC_6193.jpg" alt="头像" height="200" width="300">
+        <img src="DSC_7254.JPG" alt="头像" height="200" width="300">
     </div>
     <div id="content" style="
         max-width: 700px;
@@ -29,15 +31,17 @@
             百度一下
         </p>
     </div>
-    <div id="footer"style="
-        background-color: #f1f1f1;
-        text-align: center;
-        paddig: 40px;
-        font-size: 12px;
-    ">
-        <p>我的网站</p>
-        <a href="https://www.baidu.com">百度一下</a>
-    </div>
-
+    <footer>
+        <div id="footer" style="
+            background-color: #f1f1f1;
+            text-align: center;
+            paddig: 40px;
+            font-size: 12px;
+        ">
+            <p>我的网站</p>
+            <a href="https://www.baidu.com">百度一下</a>
+        </div>
+    </footer>
 </body>
+
 </html>
